--- a/aplicacao/index.html
+++ b/aplicacao/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h3>Desapegue!</h3>
+        <h3>Desapegue</h3>
       </div>
       <div class="form-container">
         <div class="formheader">
